8/28/25 Fixed spacing and margin errors with nav bar and hero section. Shortened the width of the whole page's margin on the desktop view, added spacing and boxing for the projects section. Started bento designing for the about me section as well.

--- a/app/_components/AboutMe.css
+++ b/app/_components/AboutMe.css
@@ -61,12 +61,97 @@
 }
 
 @media (min-width: 640px) {
+  #about-me {
+    margin-top: -3rem;
+    padding-top: 8rem;
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #about-me h2 {
+    font-weight: 600;
+    color: #333333;
+    letter-spacing: 0.05em;
+    margin: 0;
+    text-transform: uppercase;
+    font-size: 3.5rem;
+  }
+
   #who-am-i {
+    width: 100%;
+    height: auto;
+    position: relative;
+    display: flex;
     flex-direction: row-reverse;
+    justify-content: space-between;
+    gap: 3rem;
+    margin-top: 2rem;
+    margin-bottom: 10rem;
+    align-items: center;
+  }
+
+  #image {
+    overflow: hidden;
+    background: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(6px);
+    border-radius: 1rem;
+    box-shadow: 4px 4px 4px #a7c3e8;
+    max-width: 250px;
+    border: solid rgba(0, 0, 0, 0.2) 1px;
   }
 
   #text {
+    background: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(6px);
+    border-radius: 1rem;
+    box-shadow: 4px 4px 4px #a7c3e8;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 1rem;
     height: 250px;
+    border: solid rgba(0, 0, 0, 0.2) 1px;
+  }
+
+  #text h2 {
+    font-size: 1.5rem;
+    margin: 0;
+  }
+}
+
+@media (min-width: 1024px) {
+  #text h2 {
+    font-size: 2rem;
+    margin: 0;
+  }
+
+  #image {
+    overflow: hidden;
+    background: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(6px);
+    border-radius: 1rem;
+    box-shadow: 4px 4px 4px #a7c3e8;
+    max-width: 270px;
+    border: solid rgba(0, 0, 0, 0.2) 1px;
+  }
+
+  #text {
+    background: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(6px);
+    border-radius: 1rem;
+    box-shadow: 4px 4px 4px #a7c3e8;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 1rem;
+    height: 250px;
+    border: solid rgba(0, 0, 0, 0.2) 1px;
   }
 }
 
